# DomanScale

./: .gitattributes  Cargo.toml  README.md  airfont.sf2
design/: Tooling.md  Vision.md
doman_scale/: __main__.py  game.py  requirements.txt  resources.py
doman_scale/menu/: button.py  main_menu.py
doman_scale/music/: control.py  generator.py  player.py
sprites/cinematic/: sky_sunset.ase
src/: main.rs  window.rs
src/menu/: button.rs  menu_system.rs  mod.rs  plugin.rs  system.rs
src/music/: control.rs  events.rs  generate.rs  instrument.rs  midi_message.rs  mod.rs  mood.rs  musician.rs  note.rs  pitch.rs  player.rs  plugin.rs  scale.rs  state.rs  style.rs  synth.rs  theme.rs  voice.rs
