[package]
name = "doman_scale"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.2", features = ["animation", "bevy_animation", "bevy_asset", "bevy_core_pipeline", "bevy_gilrs", "bevy_gizmos", "bevy_scene", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_winit", "multi-threaded", "png", "wayland", "x11" ] }
rustysynth = "1.3.1"
tinyaudio = "0.1.2"
