[package]
name = "doman_scale"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
bevy = { version = "0.11.2", features = ["animation", "bevy_animation", "bevy_asset", "bevy_core_pipeline", "bevy_gilrs", "bevy_gizmos", "bevy_render", "bevy_scene", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_winit", "multi-threaded", "png", "wayland", "x11" ] }
itertools = "0.11.0"
rustysynth = "1.3.1"
spin_sleep = "1.1.1"
tinyaudio = "0.1.2"
